--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -9,7 +9,6 @@
 
   &__button {
     width: 100%;
-    height: 42px;
     font-family: $ff-secondary;
     font-size: 24px;
     font-weight: 500;
@@ -22,14 +21,6 @@
     position: relative;
     cursor: pointer;
 
-    @include vp-1200 {
-      height: 45px;
-    }
-
-    @include vp-768 {
-      height: 32px;
-    }
-
     @include focus {
       outline: none;
 
@@ -38,7 +29,7 @@
       }
 
       .accordion__button-icon::before {
-        background-color: $color-default-blue;
+        background-color: $color-default-white;
       }
 
       .accordion__button-icon::after {
@@ -48,11 +39,11 @@
   }
 
   &__element {
-    padding: 25px 0;
+    padding: 30px 0;
     border-top: solid 1px rgba(28, 51, 116, 0.2);
 
     @include vp-1200 {
-      padding: 25px 0 22px;
+      padding: 32px 0 30px;
     }
 
     @include vp-768 {
@@ -63,22 +54,30 @@
   }
 
   &__element.is-active {
-    padding: 25px 0 12px;
+    padding: 30px 0 10px;
 
     @include vp-1200 {
-      padding: 21px 0 24px;
+      padding: 30px 0 20px;
     }
 
     @include vp-768 {
       padding: 0;
       padding-top: 20px;
-      padding-bottom: 20px;
+      padding-bottom: 10px;
     }
   }
 
   &__element:last-child {
     border-bottom: solid 1px rgba(28, 51, 116, 0.2);
     margin-bottom: 0;
+
+    @include vp-1200 {
+      padding: 25px 0 23px;
+    }
+
+    @include vp-768 {
+      padding: 21px 0 16px;
+    }
   }
 
   &__element:hover > &__button > &__button-icon {
@@ -86,7 +85,7 @@
   }
 
   &__element:hover > &__button > &__button-icon::before {
-    background-color: $color-default-blue;
+    background-color: $color-default-white;
   }
 
   &__element:hover > &__button > &__button-icon::after {
@@ -106,17 +105,18 @@
   }
 
   &__wrapper {
-    padding: 10px 0;
+    padding: 15px 0;
     max-width: 660px;
 
     @include vp-1200 {
-      padding: 5px 0 0;
+      padding: 15px 0 0;
       max-width: 665px;
     }
 
     @include vp-768 {
       font-size: 16px;
       padding-top: 8px;
+      padding: 10px 0;
     }
   }
 
@@ -144,14 +144,17 @@
   border-radius: 50%;
   border: solid 1px $color-default-blue;
   position: absolute;
-  top: 0;
+  top: 50%;
+  transform: translateY(-50%);
   right: 0;
   margin: auto;
 
   @include vp-768 {
     width: 32px;
     height: 32px;
-    top: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
   }
 }
 
@@ -184,6 +187,7 @@
 .accordion__button-icon:hover::after {
   background-color: $color-default-white;
 }
+
 
 .accordion__button-text {
   display: inline-block;
