--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -6,7 +6,7 @@
   letter-spacing: 1.62px;
   line-height: normal;
   text-align: center;
-  margin-bottom: 45px;
+  margin-bottom: 42px;
 
   @include vp-1200 {
     font-size: 42px;
@@ -17,7 +17,7 @@
   @include vp-768 {
     font-size: 32px;
     letter-spacing: 0.96px;
-    margin-bottom: 16px;
+    margin-bottom: 43px;
   }
 }
 
@@ -74,7 +74,6 @@
   @include vp-1200 {
     margin: 0;
     font-size: 20px;
-    margin-bottom: 0;
   }
 
   @include vp-768 {
@@ -96,6 +95,7 @@
     width: 100%;
     margin: 0;
     text-align: center;
+    padding: 0 45px;
   }
 }
 
@@ -107,6 +107,7 @@
   line-height: 140%;
   font-style: normal;
   text-align: center;
+  margin: 0 auto;
 
   @include vp-1200 {
     max-width: 172px;
@@ -115,7 +116,6 @@
 
   @include vp-768 {
     width: 100%;
-    margin: 0;
     text-align: center;
   }
 }
@@ -127,36 +127,45 @@
   font-weight: 700;
   line-height: 71px;
   color: $color-default-white;
+  text-align: center;
+  margin-bottom: 5px;
+  letter-spacing: 1.5px;
+
 
   @include vp-1200 {
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     letter-spacing: 1px;
+  }
+
+  @include vp-768 {
+    margin-bottom: 0;
   }
 }
 
 .advantages__center-title {
   margin: 0;
   font-family: $ff-secondary;
-  font-size: 28px;
+  font-size: 26px;
   font-weight: 700;
   line-height: 150%;
   margin-bottom: 35px;
+  text-align: center;
 
   @include vp-1200 {
     margin: 0;
     font-size: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 18px;
     letter-spacing: 1px;
   }
 
   @include vp-768 {
     margin: 0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
 }
 
 .advantages {
-  padding: 108px 0 129px;
+  padding: 108px 0 123px;
   background-color: $color-background-ghost-white;
 
   @include vp-1200 {
@@ -164,9 +173,224 @@
   }
 
   @include vp-768 {
-    padding: 60px 0 40px;
+    padding: 63px 0 40px;
   }
 }
+
+.advantages__content {
+  list-style: none;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 0 163px;
+  display: grid;
+  grid-template-columns: 340px 240px 340px;
+  column-gap: 60px;
+
+  @include vp-1200 {
+    padding: 0 45px;
+    grid-template-columns: 310px 320px;
+    column-gap: 45px;
+    margin: 0 auto;
+  }
+
+  @include vp-768 {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.advantages__item:nth-child(1) {
+  display: grid;
+  grid-template-columns: 108px 1fr;
+  column-gap: 30px;
+  padding-left: 20px;
+  padding-bottom: 77px;
+  border-bottom: solid 2px rgba(209, 10, 66, 0.2);
+
+  @include vp-1200 {
+    border-bottom: none;
+    grid-template-columns: 89px 1fr;
+    column-gap: 29px;
+    grid-column: 1 / 2;
+    padding-bottom: 0;
+    padding-left: 0;
+    margin-bottom: 45px;
+  }
+
+  @include vp-768 {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+}
+
+.advantages__item:nth-child(2) {
+  grid-row: 1 / 2;
+  grid-column: 3 / 4;
+  display: grid;
+  grid-template-columns: 72px 1fr;
+  column-gap: 29px;
+  border-bottom: solid 2px rgba(209, 10, 66, 0.2);
+
+  @include vp-1200 {
+    border-bottom: none;
+    grid-column: 2 / 3;
+    grid-template-columns: 59px 1fr;
+    margin-bottom: 45px;
+  }
+
+  @include vp-768 {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 43px;
+  }
+}
+
+.advantages__item:nth-child(2) .advantages__title {
+  @include vp-768 {
+    margin-bottom: 3px;
+  }
+}
+
+.advantages__item:nth-child(3) {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  background-color: $color-background-resolution-blue;
+  color: $color-default-white;
+  margin-top: 12px;
+  margin-bottom: 5px;
+
+  @include vp-1200 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    background-color: $color-background-ghost-white;
+    margin: 0 auto;
+    width: 442px;
+    margin-bottom: 42px;
+  }
+
+  @include vp-768 {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+.advantages__item:nth-child(4) {
+  display: grid;
+  grid-template-columns: 108px 1fr;
+  column-gap: 28px;
+  padding-left: 20px;
+  padding-top: 70px;
+
+  @include vp-1200 {
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+    padding-top: 0;
+    grid-template-columns: 89px 1fr;
+    column-gap: 29px;
+    padding-left: 0;
+  }
+
+  @include vp-768 {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 35px;
+  }
+}
+
+.advantages__item:nth-child(4) .advantages__text {
+  @include vp-768 {
+    padding: 0 50px;
+  }
+}
+
+.advantages__item:nth-child(4) .advantages__title {
+  @include vp-768 {
+    margin-bottom: 4px;
+  }
+}
+
+.advantages__item:nth-child(5) {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 72px 1fr;
+  column-gap: 30px;
+  padding-top: 70px;
+
+  @include vp-1200 {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    padding-top: 0;
+    grid-template-columns: 59px 1fr;
+    column-gap: 29px;
+  }
+
+  @include vp-768 {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 23px;
+  }
+}
+
+.advantages__item:nth-child(5) .advantages__title {
+  @include vp-768 {
+    margin-bottom: 2px;
+  }
+}
+
+.advantages__right {
+  padding-top: 5px;
+
+  @include vp-1200 {
+    padding-top: 0;
+  }
+}
+
+.advantages__center-content {
+  padding: 55px 30px 55px;
+
+  @include vp-1200 {
+    padding: 0;
+    padding: 33px 45px 40px;
+    margin: 0 auto;
+    background-color: $color-background-resolution-blue;
+  }
+
+  @include vp-768 {
+    width: 100%;
+    margin: 0;
+    padding: 38px 45px 45px;
+    margin-bottom: 40px;
+  }
+}
+
+/*
+
 
 .advantages__content {
   max-width: 1366px;
@@ -332,3 +556,4 @@
     margin-right: 0;
   }
 }
+ */
