--- a/source/sass/blocks/faq-tabs.scss
+++ b/source/sass/blocks/faq-tabs.scss
@@ -5,21 +5,21 @@
 .faq__container {
   max-width: 1366px;
   margin: 0 auto;
-  padding: 120px 103px 68px;
+  padding: 120px 103px 122px;
 
   @include vp-1366 {
-    padding: 100px 45px 25px;
+    padding: 100px 45px 100px;
   }
 
   @include vp-1200 {
     max-width: 768px;
     margin: 0 auto;
-    padding: 110px 45px 25px;
+    padding: 100px 45px 100px;
   }
 
   @include vp-768 {
     margin: 0 auto;
-    padding: 70px 15px 0;
+    padding: 70px 15px;
     height: fit-content;
   }
 }
@@ -74,7 +74,7 @@
     flex-direction: row;
     justify-content: center;
     margin: 0;
-    margin-bottom: 15px;
+    margin-bottom: 14px;
     flex-wrap: wrap;
     gap: 8px;
   }
