--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,26 +6,23 @@
 .footer__nav {
   max-width: 1366px;
   margin: 0 auto;
-  padding: 44px 0 35px;
+  padding: 45px 0 40px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   position: relative;
 
   @include vp-1200 {
-    padding: 40px 0 45px;
+    padding: 40px 0;
   }
 
   @include vp-768 {
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom: 55px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    position: relative;
   }
-}
-
-.footer__columns {
-  display: flex;
-  justify-content: space-between;
 }
 
 .footer__list {
@@ -37,48 +34,89 @@
   gap: 10px;
   margin: 0 auto 0 0;
   padding: 0;
-  padding-left: 8px;
-  padding-bottom: 5px;
+  padding-left: 9px;
+  flex-wrap: wrap;
 
   @include vp-1200 {
     gap: 0;
     padding-bottom: 0;
+    padding-top: 5px;
+    padding-left: 12px;
   }
 
   @include vp-768 {
     display: block;
     column-count: 2;
     column-gap: 45px;
-    margin-bottom: 15px;
+    margin-top: -5px;
+    margin-bottom: 22px;
     padding-left: 0;
+    padding-top: 0;
   }
 }
 
-.footer__logo {
-  color: $color-default-white;
-  height: fit-content;
+.footer__logo-link {
+  margin: 0;
+  padding: 0;
   margin-right: auto;
-  font-size: 26px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 0.52px;
-
-  @include vp-1200 {
-    font-size: 24px;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.48px;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $color-default-white;
 
   @include vp-768 {
     position: absolute;
-    top: 45px;
-    left: 0;
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 600;
-    margin-right: 0;
+    top: 50px;
+  }
+}
+
+.footer__logo-link:hover {
+  opacity: 0.7;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.7);
+}
+
+.footer__logo-link:active {
+  opacity: 1;
+  border-bottom: solid 1px rgba(255, 255, 255);
+}
+
+.footer__logo-link:focus-visible {
+  outline: solid 1px $color-default-white;
+  outline-offset: 2px;
+}
+
+
+.logo__desktop-icon {
+  @include vp-1200 {
+    display: none;
+  }
+
+  @include vp-768 {
+    display: none;
+  }
+}
+
+.logo__tablet-icon {
+  display: none;
+
+  @include vp-1200 {
+    display: block;
+  }
+
+  @include vp-768 {
+    display: none;
+  }
+}
+
+.logo__mobile-icon {
+  display: none;
+
+  @include vp-1200 {
+    display: none;
+  }
+
+  @include vp-768 {
+    display: block;
   }
 }
 
@@ -88,9 +126,18 @@
   font-size: 14px;
   line-height: normal;
   font-weight: 400;
+  margin: 0;
+  padding: 0;
+  margin-right: auto;
+  vertical-align: top;
+
+  @include vp-1200 {
+    vertical-align: middle;
+  }
 
   @include vp-768 {
     font-size: 16px;
+    margin-right: 0;
   }
 
   &:hover:not(.focus-visible) {
@@ -103,25 +150,18 @@
   }
 }
 
-.footer__item {
-  @include vp-768 {
-    margin-bottom: 16px;
-  }
-}
-
 .footer__item:first-child {
   @include vp-768 {
-    margin-top: 49px;
+    margin-top: 40px;
   }
 }
-
 
 .footer__item:not(:last-child) {
   margin-right: 30px;
-}
 
-.footer__item:nth-child(3) {
-  padding-top: 8px;
+  @include vp-768 {
+    margin-bottom: 15px;
+  }
 }
 
 .footer__social-list {
@@ -129,20 +169,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  padding-bottom: 10px;
   padding-right: 1px;
+  margin-top: -11px;
 
   @include vp-1200 {
+    margin: 0;
+    padding: 0;
     padding-bottom: 0;
+    padding-top: 5px;
   }
 }
 
 .footer__social-item {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .footer__social-item:not(:last-child) {
