--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -54,12 +54,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 502px;
+    max-width: 510px;
     padding-top: 0;
     margin-right: 0;
   }
 
-  @media (max-width: $vp-768) {
+  @include vp-768 {
     padding: 0 15px;
     align-items: flex-start;
   }
@@ -118,6 +118,7 @@
 
   @media (max-width: $vp-768) {
     text-align: left;
+    padding-right: 27px;
   }
 }
 
@@ -155,7 +156,7 @@
 
   @media (max-width: $vp-768) {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 }
 
