--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -25,6 +25,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  flex-wrap: wrap;
 
   @include vp-1200 {
     padding: 35px 0 18px;
@@ -38,24 +39,44 @@
 .header__logo {
   color: $color-default-white;
   height: fit-content;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  color: $color-default-white;
+}
 
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 0.72px;
-
+.header__logo-desktop {
   @include vp-1200 {
-    font-size: 24px;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.48px;
+    display: none;
   }
 
   @include vp-768 {
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 600;
+    display: none;
+  }
+}
+
+.header__logo-tablet {
+  display: none;
+
+  @include vp-1200 {
+    display: block;
+  }
+
+  @include vp-768 {
+    display: none;
+  }
+}
+
+.header__logo-mobile {
+  display: none;
+
+  @include vp-1200 {
+    display: none;
+  }
+
+  @include vp-768 {
+    display: block;
   }
 }
 
@@ -83,4 +104,26 @@
     font-weight: 600;
     letter-spacing: 0.4px;
   }
+}
+
+.header__phone-number:not(:last-child) {
+  margin-right: 10px;
+}
+
+.header__logo:hover,
+.header__phone-number:hover {
+  opacity: 0.7;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.7);
+}
+
+.header__logo:active,
+.header__phone-number:active {
+  opacity: 1;
+  border-bottom: solid 1px rgba(255, 255, 255);
+}
+
+.header__logo:focus-visible,
+.header__phone-number:focus-visible {
+  outline: solid 1px $color-default-white;
+  outline-offset: 2px;
 }
