--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,15 +1,15 @@
 .promo__container {
   max-width: 1366px;
   margin: 0 auto;
-  padding: 128px 103px 120px;
+  padding: 135px 103px 120px;
 
   @include vp-1200 {
-    padding: 90px 45px;
+    padding: 90px 45px 99px;
     height: fit-content;
   }
 
   @include vp-768 {
-    padding: 60px 15px 75px;
+    padding: 62px 15px 70px;
     height: fit-content;
   }
 }
@@ -39,7 +39,7 @@
   @include vp-768 {
     font-size: 32px;
     letter-spacing: 0.96px;
-    margin-bottom: 40px;
+    margin-bottom: 43px;
   }
 }
 
@@ -58,6 +58,10 @@
   line-height: 75px;
   margin: 0;
   margin-bottom: 18px;
+
+  @include vp-768 {
+    margin-bottom: 13px;
+  }
 }
 
 .promo__main-text {
@@ -68,7 +72,7 @@
   margin: 0;
 
   @include vp-768 {
-    margin-bottom: 30px;
+    margin-bottom: 35px;
     text-align: center;
   }
 }
@@ -134,11 +138,13 @@
 
   @include vp-768 {
     text-align: center;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
   }
 }
 
 .promo__img picture img {
+  object-fit: cover;
+  height: 100%;
   @include vp-1366 {
     width: 100%;
   }
@@ -227,6 +233,7 @@
     justify-content: flex-start;
     align-items: center;
     max-width: 100%;
+    padding: 40px 45px 44px;
   }
 }
 
@@ -234,7 +241,7 @@
   background: $gradient-text-crimson-red-to-cobalt;
   padding: 7px;
   min-width: 100%;
-  height: 45%;
+  height: 46%;
 
   @include vp-1200 {
     min-width: 324px;
@@ -248,7 +255,7 @@
 
 .promo__content {
   background-color: $color-default-white;
-  padding: 20px 28px 25px;
+  padding: 20px 28px 30px;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -258,10 +265,11 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 20px 28px 30px;
   }
 
   @include vp-768 {
-    padding: 30px 28px 35px;
+    padding: 32px 28px 40px;
     align-items: center;
   }
 }
