--- a/source/sass/blocks/supergames.scss
+++ b/source/sass/blocks/supergames.scss
@@ -28,23 +28,25 @@
   @include vp-768 {
     flex-direction: column;
     align-items: center;
-    max-width: 290px;
+    max-width: 100%;
     justify-content: center;
   }
 }
 
 .super-games__info {
   background-color: $color-background-torch-red;
-  padding: 85px 78px 80px;
+  padding: 85px 79px 86px;
   display: flex;
   flex-direction: column;
 
   @include vp-1366 {
-    padding: 50px 45px 45px;
+    padding: 50px 45px;
   }
 
   @include vp-768 {
-    padding: 50px 44px 45px;
+    width: 100%;
+    padding: 50px 44px;
+    align-items: center;
   }
 }
 
@@ -104,7 +106,7 @@
   font-size: 18px;
   line-height: 20px;
   margin: 0;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
 
   @include vp-1200 {
     font-size: 12px;
@@ -151,7 +153,7 @@
   font-family: $ff-secondary;
   font-size: 40px;
   font-weight: 700;
-  line-height: 50px;
+  line-height: 45px;
   color: $color-default-white;
   margin-right: 7px;
 
@@ -165,7 +167,7 @@
 .super-games__monthyear {
   font-family: $ff-secondary;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 18px;
   color: $color-default-white;
 
   @include vp-1200 {
@@ -201,11 +203,11 @@
   @include vp-1200 {
     font-size: 12px;
     line-height: 18px;
-    margin-bottom: 25px;
   }
 
   @include vp-768 {
     margin-bottom: 30px;
+    align-self: flex-start;
   }
 }
 
@@ -217,12 +219,13 @@
   letter-spacing: 0.6px;
   font-weight: 700;
   line-height: normal;
-  padding: 26px 110px;
+  padding: 25px 110px;
   border: solid 2px $color-default-white;
   cursor: pointer;
   color: $color-default-white;
-  margin-bottom: 5px;
+  margin-bottom: 0;
   margin-top: auto;
+  max-width: 343px;
 
   @include vp-1200 {
     font-size: 10px;
@@ -246,6 +249,10 @@
 
 .super-games__button:disabled {
   opacity: 0.5;
+}
+
+.super-games__img {
+  width: 100%;
 }
 
 .super-games__img picture img {
