--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -42,7 +42,7 @@
   }
 
   @include vp-768 {
-    padding: 25px 47px 54px;
+    padding: 28px 47px 53px;
   }
 }
 
@@ -54,6 +54,7 @@
   line-height: normal;
   margin: 0;
   margin-bottom: 32px;
+  margin-left: 2px;
 
   @include vp-1200 {
     font-size: 42px;
@@ -77,22 +78,29 @@
 
 .trainers__image {
   position: relative;
+  background-color: $color-default-blue;
+
+  @include vp-1200 {
+    height: 294px;
+  }
+
+  @include vp-768 {
+    height: auto;
+    aspect-ratio: 1/1.22;
+  }
 }
 
 .trainers__image picture img {
 
   @include vp-1200 {
-    width: 268px;
-    height: 294px;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
   }
 
   @include vp-768 {
     width: 100%;
-    min-width: 226px;
-    height:fit-content;
-    aspect-ratio: 1/1.22;
-    object-fit: fill;
+    height: 100%;
   }
 }
 
@@ -103,14 +111,10 @@
   font-weight: 700;
   line-height: 27px;
   text-align: center;
-  margin: 0;
-  bottom: 20px;
-  width: 100%;
   position: absolute;
-
-  @include vp-768 {
-    width: 100%;
-  }
+  margin: 0 auto;
+  bottom: 22px;
+  width: 100%;
 }
 
 .trainers__overlay {
@@ -122,7 +126,7 @@
   max-width: 260px;
   background-color: $swiper-overlay;
   color: $color-default-white;
-  padding: 45px;
+  padding: 52px 45px;
   font-family: $ff-secondary;
   flex-direction: column;
   align-items: center;
@@ -130,6 +134,7 @@
 
   @include vp-1200 {
     width: 100%;
+    max-width: none;
   }
 
   @include vp-768 {
@@ -155,7 +160,7 @@
 .trainers__overlay-tagline {
   margin: 0;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 18px;
   color: $color-spindle-gray;
   margin-bottom: 35px;
 }
@@ -165,6 +170,9 @@
   line-height: 21px;
   padding-left: 15px;
   list-style-type: disc;
+  margin-left: 10px;
+  max-height: 160px;
+  overflow: auto;
 }
 
 .trainers__item {
@@ -184,7 +192,7 @@
 }
 
 .trainers__overlay-item:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: 13px;
 
   @include vp-768 {
     margin-bottom: 5px;
