--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -92,6 +92,8 @@
   width: 100%;
   margin: 0 auto;
   justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 40px;
 
   @include vp-1200 {
     flex-direction: column;
