--- a/css/style.css
+++ b/css/style.css
@@ -2854,6 +2854,9 @@ html {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  row-gap: 40px;
 }
 
 .tabs__card {
