--- a/css/style.css
+++ b/css/style.css
@@ -3268,6 +3268,16 @@ html {
 .advantages {
   padding: 108px 0 123px;
   background-color: #f8f9fc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .advantages__content {
