--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -13,14 +13,14 @@
   position: relative;
 
   @include vp-1200 {
-    padding: 40px 0;
+    padding: 40px 0 44px;
   }
 
   @include vp-768 {
     flex-direction: column;
     align-items: flex-start;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 52px;
     position: relative;
   }
 }
@@ -29,7 +29,7 @@
   color: $color-default-white;
   list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 10px;
   margin: 0 auto 0 0;
@@ -167,9 +167,10 @@
 .footer__social-list {
   list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+  row-gap: 20px;
   margin: 0;
   padding: 0;
   padding-right: 1px;
