--- a/source/sass/blocks/supergames.scss
+++ b/source/sass/blocks/supergames.scss
@@ -35,7 +35,7 @@
 
 .super-games__info {
   background-color: $color-background-torch-red;
-  padding: 85px 79px 86px;
+  padding: 85px 79px 87px;
   display: flex;
   flex-direction: column;
 
@@ -47,6 +47,7 @@
     width: 100%;
     padding: 50px 44px;
     align-items: center;
+    justify-content: center;
   }
 }
 
@@ -207,7 +208,6 @@
 
   @include vp-768 {
     margin-bottom: 30px;
-    align-self: flex-start;
   }
 }
 
